--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatgpt-digital-store-with-video",
+  "name": "chatgpt-digital-store-feb7",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@google/genai": "1.3.0",
-    "@supabase/supabase-js": "2.39.3"
+    "@supabase/supabase-js": "2.39.3",
+    "@vercel/node": "^5.5.33",
+    "crypto": "^1.0.1",
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
